fixed modal header and footer z-index

--- a/components/ocd-filter-portfolio/ocd-filter-portfolio.css
+++ b/components/ocd-filter-portfolio/ocd-filter-portfolio.css
@@ -248,7 +248,7 @@
    padding: 1em;
    background-color: #fafafa;
    border-bottom: 1px solid #ccc;
-   z-index: 1;
+   z-index: 2;
 }
 
 .ocdfp-modal .modal-header .modal-title {
@@ -287,6 +287,7 @@
    padding: 1em;
    background-color: #fafafa;
    border-top: 1px solid #ccc;
+   z-index: 2;
 }
  
 .ocdfp-modal .modal-footer > button:only-child {
